RESOLVED FIXED115182
REGRESSION(r148758): Remove WTFLogAlways call from IconLoader.
https://bugs.webkit.org/show_bug.cgi?id=115182
Summary REGRESSION(r148758): Remove WTFLogAlways call from IconLoader.
Raphael Kubo da Costa (:rakuco)
Reported 2013-04-25 09:26:22 PDT
REGRESSION(r148758): Remove WTFLogAlways call from IconLoader.
Attachments
Patch (1.75 KB, patch)
2013-04-25 09:28 PDT, Raphael Kubo da Costa (:rakuco)
mitz: review+
Raphael Kubo da Costa (:rakuco)
Comment 1 2013-04-25 09:28:02 PDT
Raphael Kubo da Costa (:rakuco)
Comment 3 2013-04-25 09:32:09 PDT
Note You need to log in before you can comment on or make changes to this bug.