REGRESSION(r148758): Remove WTFLogAlways call from IconLoader. https://bugs.webkit.org/show_bug.cgi?id=115182

Reviewed by Dan Bernstein.

The call added in r148758 was apparently a leftover from some debugging
session, and it makes the Interactive/window-resize.html performance
test randomly fail on Qt and EFL due to WTFLogAlways writing to stderr.

* loader/icon/IconLoader.cpp:
(WebCore::IconLoader::notifyFinished):

Canonical link: https://commits.webkit.org/133612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149115 268f45cc-cd09-0410-ab3c-d52691b4dbfc